# frets

./: .gitignore  CHANGELOG.md  HMatrix-Implementation-Summary.md  README.md  cabal.project  devenv.nix  flake.nix  fretboard-thoery.cabal  pyproject.toml
bench/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: fretboard-thoery-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.8.2/: fretboard-thoery-0.1.0.0-inplace.conf  package.cache
docs/: A Harmonic Analysis Network.md  extract_chords.py  extracted_chords.json
fret-cli/: Main.hs
fretboard-diagram/: CHANGELOG.md
fretboard-thoery/: fretboard-thoery.cabal
fretboard-thoery/bench/: Main.hs
fretboard-thoery/src/: Fretboard.hs
fretboard-thoery/src/Data/: HarmonicAnalysis.hs
fretboard-thoery/src/Data/Functor/Rix/: Rep.hs
fretboard-thoery/src/Data/HarmonicAnalysis/: ChainOfThirds.hs  Display.hs  PathFinding.hs  RiemannMatrix.hs  Tension.hs  Types.hs
fretboard-thoery/src/Spec/: Fretboard.hs
fretboard-thoery/test/: Main.hs
src/: Fretboard.hs  Modulation.hs
src/Finger/: TH.hs
