cabal-version:      3.0
name:               fretboard-thoery
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             o1lo01ol1o
maintainer:         tim.pierson@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Chord
    Data.Functor.Rix.Rep
    Finger
    Finger.TH
    Fretboard
    Modulation

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , adjunctions
    , base                  ^>=4.17
    , bifunctors
    , comonad
    , comonad-transformers
    , containers
    , distributive
    , free
    , lattices
    , lens
    , linear
    , mod
    , mtl
    , parallel
    , pqueue
    , profunctors
    , semigroups
    , transformers
    , vector
    , vector-th-unbox

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite fretboard-thoery-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.17

executable fretboard-thoery-bench
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   bench
  build-depends:
    , base              ^>=4.17
    , criterion
    , fretboard-thoery

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2

executable fret-cli
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   fret-cli
  build-depends:
    , base                  ^>=4.17
    , fretboard-thoery
    , optparse-applicative

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
